--- a/docs/disable-if-display-name.adoc
+++ b/docs/disable-if-display-name.adoc
@@ -1,5 +1,5 @@
 :page-title: Disable Parameterized Test Based on DisplayName
-:page-description: Extends JUnit Jupiter with `@DisableIfDisplayName`, which selectively disables parameterized tests
+:page-description: The JUnit 5 (Jupiter) extension `@DisableIfDisplayName` selectively disables parameterized tests based on their display name
+:page-unlist: true
 
-This document has been moved and updated.
-See link:disable-parameterized-tests.adoc[the updated document].
+This document has been link:/docs/disable-parameterized-tests.adoc[moved and updated].
