--- a/docs/disable-parameterized-tests.adoc
+++ b/docs/disable-parameterized-tests.adoc
@@ -1,5 +1,5 @@
 :page-title: Disable Parameterized Test
-:page-description: Extends JUnit Jupiter with multiple extensions, which selectively disables parameterized tests
+:page-description: The JUnit 5 (Jupiter) extensions `@DisableIfDisplayName`, `@DisableIfArgument`, and more selectively disable parameterized tests based on their display name or argument values
 :xp-demo-dir: ../src/demo/java
 :demo: {xp-demo-dir}/org/junitpioneer/jupiter/params/DisableParameterizedExtensionDemo.java
 
@@ -35,8 +35,11 @@ If substrings are not powerful enough, you can also use regular expressions:
 include::{demo}[tag=disable_parameterized_regex]
 ----
 
-NOTE: Since JUnit Pioneer 1.5.0, using both `matches` and `contains` in a single annotation is no longer permitted.
+[NOTE]
+====
+Since JUnit Pioneer 1.5.0, using both `matches` and `contains` in a single annotation is no longer permitted.
 The reason is that it's not clear from reading the annotation whether it's *and* or *or* semantics, i.e. whether the display name needs to both match the regex *and* contain the substring to be disabled or whether fulfilling one criterion suffices.
+====
 
 == DisableIfArgument
 
@@ -172,9 +175,12 @@ These test invocations get disabled:
 
 Just like with `contains`, if any argument matches any expression from `matches`, the invocation gets disabled.
 
-NOTE: While the documentation uses `String` values for demonstration purposes, you can use it to disable tests with other parameter types.
+[NOTE]
+====
+While the documentation uses `String` values for demonstration purposes, you can use it to disable tests with other parameter types.
 However, the arguments will be converted to `String` with `Object#toString()` before evaluation.
 Make sure that your parameter types have a meaningful `toString` method.
+====
 
 == Thread-Safety
 
